install xabe.ffmpeg and Json

--- a/sztguiFeleves/sztguiFeleves.csproj
+++ b/sztguiFeleves/sztguiFeleves.csproj
@@ -8,4 +8,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+
+	<ItemGroup>
+		<PackageReference Include="Xabe.FFmpeg" Version="6.0.1" />
+		<PackageReference Include="System.Text.Json" Version="9.0.0" />
+	</ItemGroup>
+
+
 </Project>
