--- a/sztguiFeleves/sztguiFeleves.csproj
+++ b/sztguiFeleves/sztguiFeleves.csproj
@@ -8,6 +8,56 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\ffmpeg\avcodec-62.dll" />
+    <None Remove="Resources\ffmpeg\avdevice-62.dll" />
+    <None Remove="Resources\ffmpeg\avfilter-11.dll" />
+    <None Remove="Resources\ffmpeg\avformat-62.dll" />
+    <None Remove="Resources\ffmpeg\avutil-60.dll" />
+    <None Remove="Resources\ffmpeg\ffmpeg.exe" />
+    <None Remove="Resources\ffmpeg\ffplay.exe" />
+    <None Remove="Resources\ffmpeg\ffprobe.exe" />
+    <None Remove="Resources\ffmpeg\postproc-59.dll" />
+    <None Remove="Resources\ffmpeg\swresample-6.dll" />
+    <None Remove="Resources\ffmpeg\swscale-9.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\ffmpeg\avcodec-62.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\avdevice-62.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\avfilter-11.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\avformat-62.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\avutil-60.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\ffmpeg.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\ffplay.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\ffprobe.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\postproc-59.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\swresample-6.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\ffmpeg\swscale-9.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 
 	<ItemGroup>
 		<PackageReference Include="Xabe.FFmpeg" Version="6.0.1" />
